--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -76,6 +76,11 @@
       <height>21</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">body{
+backgound-color:&quot;red&quot;
+}</string>
+    </property>
     <property name="text">
      <string/>
     </property>
