--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -35,7 +35,7 @@
     <property name="geometry">
      <rect>
       <x>900</x>
-      <y>360</y>
+      <y>410</y>
       <width>121</width>
       <height>31</height>
      </rect>
@@ -48,7 +48,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>360</y>
+      <y>410</y>
       <width>101</width>
       <height>31</height>
      </rect>
@@ -61,7 +61,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>0</y>
+      <y>50</y>
       <width>1011</width>
       <height>349</height>
      </rect>
@@ -71,7 +71,7 @@
     <property name="geometry">
      <rect>
       <x>350</x>
-      <y>370</y>
+      <y>420</y>
       <width>321</width>
       <height>21</height>
      </rect>
@@ -89,7 +89,7 @@ backgound-color:&quot;red&quot;
     <property name="geometry">
      <rect>
       <x>800</x>
-      <y>360</y>
+      <y>410</y>
       <width>91</width>
       <height>31</height>
      </rect>
@@ -102,7 +102,7 @@ backgound-color:&quot;red&quot;
     <property name="geometry">
      <rect>
       <x>130</x>
-      <y>360</y>
+      <y>410</y>
       <width>131</width>
       <height>31</height>
      </rect>
@@ -113,6 +113,19 @@ backgound-color:&quot;red&quot;
     <property name="icon">
      <iconset>
       <normaloff>images/iconfinder_floppy_285657.png</normaloff>images/iconfinder_floppy_285657.png</iconset>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lblCurrentUser">
+    <property name="geometry">
+     <rect>
+      <x>16</x>
+      <y>6</y>
+      <width>131</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
     </property>
    </widget>
   </widget>
