--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -14,10 +14,43 @@
    <string>MainWindow</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">QPushButton:hover:!pressed
-{
-  border: 1px solid red;
+   <string notr="true">QHBoxLayout#topPanel {
+background-color: gray; border: none;
 }
+QGroupBox{
+background-color: gray;
+color:white
+
+}
+
+QMainWindow{
+background-color: qlineargradient(spread:reflect, x1:0.5,
+y1:0, x2:0, y2:0, stop:0 rgba(91, 204, 233, 100), stop:1
+rgba(32, 80, 96, 100));
+}
+
+QLineEdit {
+    border-width: 1px;
+    border-style: solid;
+    border-radius: 4px;
+}
+#loginForm {
+background: rgba(0, 0, 0, 80);
+border-radius: 8px;
+}
+
+QLabel { color: white; }
+QLineEdit { border-radius: 3px; }
+QPushButton {
+color: white;
+background-color: #27a9e3;
+border-width: 0px;
+border-radius: 3px;
+}
+QPushButton:hover { background-color: #66c011; }
+
+
+
 </string>
   </property>
   <widget class="QWidget" name="centralWidget">
